Add route to delete a player by ID and his transactions on cascade
